update html file

--- a/swnwb1.html
+++ b/swnwb1.html
@@ -11,7 +11,7 @@
         <ul>
           <li style="font-family:courier"><a href="./index.html">Home</a></li>
           <li style="font-family:courier">SwNwBasis:1</li>
-          <li style="font-family:courier"><a href="./CV.html">CV</li>
+          <li style="font-family:courier"><a href="./CV.html">CV</a></li>
         </ul>
       </nav>
     </header>
@@ -22,7 +22,7 @@
       <br>xx</p>
       <hr>
     </main>
-    
+
     <footer>
       <small>クロステックデザインコース</small>
     </footer>
