--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <main>
       <h1>私の学習進捗ページ</h1>
       <img src="./assets/images/screen.jpg" alt="firework">
-      <iframe width="560" height="315" src="https://youtu.be/7TE1MjsE6mA
-      " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://youtu.be/7TE1MjsE6mA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <h2>履修科目</h2>
       <h3>前期</h3>ß
         <ol>
