update html file

--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -11,9 +11,9 @@
         <nav id="main_nav">
           <ul>
 
-            <li>Home</li>
-            <li>swnw</li>
-            <li>cv</li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./swnwb1.html">SwNwBasis:1</a></li>
+            <li><a href="./CV.html">CV</a></li>
 
           </ul>
 
@@ -24,11 +24,26 @@
           <div class="session">
             <h2>session:1</h2>
             <h3>課題:1</h3>
-
+            <p>???</p>
           </div>
-        </main>
 
-    </div>
+          <div class="session">
+            <h2>session:2</h2>
+            <h3>課題:1</h3>
+            <p>???</p>
+          </div>
+
+          <div class="session">
+            <h2>session:3</h2>
+            <h3>課題:1</h3>
+            <p>???</p>
+          </div>
+
+          <footer>
+            <p>emi</p>
+
+          </footer>
+        </main>
 
     </div>
 
