update html files

--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>softwareenshuu2</title>
+    <title>ソフトウェアネットワーク演習II</title>
     <link rel="stylesheet" href="../assets/css/common.css">
   </head>
   <body>
@@ -11,16 +11,18 @@
         <nav id="main_nav">
           <ul>
 
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./swnwb1.html">SwNwBasis:1</a></li>
-            <li><a href="./CV.html">CV</a></li>
+            <li style="font-family:courier"><a href="../index.html">Home</a></li>
+            <li style="font-family:courier"><a href="../swnwb1.html">SwNwBasis:1</a></li>
+            <li style="font-family:courier">SwNwBasis:2</li>
+            <li style="font-family:courier"><a href="../CV.html">CV</a></li>
+
 
           </ul>
 
         </nav>
       </header>
         <main>
-          <h1>softwareenshuu2</h1>
+          <h1>ソフトウェアネットワーク演習II</h1>
           <div class="session">
             <h2>session:1</h2>
             <h3>課題:1</h3>
