--- a/swnwb1.html
+++ b/swnwb1.html
@@ -11,6 +11,7 @@
         <ul>
           <li style="font-family:courier"><a href="./index.html">Home</a></li>
           <li style="font-family:courier">SwNwBasis:1</li>
+          <li style="font-family:courier"><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
           <li style="font-family:courier"><a href="./CV.html">CV</a></li>
         </ul>
       </nav>
