--- a/CV.html
+++ b/CV.html
@@ -11,6 +11,7 @@
         <ul>
           <li style="font-family:courier"><a href="./index.html">Home</a></li>
           <li style="font-family:courier"><a href="./swnwb1.html">SwNwBasis:1</a></li>
+          <li style="font-family:courier"><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
           <li style="font-family:courier">CV</li>
         </ul>
       </nav>
