--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
           <li style="font-family:courier">Home</li>
           <li style="font-family:courier"><a href="./swnwb1.html">SwNwBasis:1</a></li>
-          <li style="font-family:courier"><a href="./subjests/swnwb2.html">SwNwBasis:2</a></li>
+          <li style="font-family:courier"><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
           <li style="font-family:courier"><a href="./CV.html">CV</a></li>
         </ul>
       </nav>
