--- a/swnwb1.html
+++ b/swnwb1.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./assets/css/common.css">
+  <link rel="stylesheet" href="./assets/css/custom.css">
+  <title>PRASERTCHAI TANAPORN's webpage</title>
+</head>
 <body style="background-color:thistle;">
-  <head>
-    <meta charset="utf-8">
-    <title>PRASERTCHAI TANAPORN's webpage</title>
-  </head>
+
   <body>
     <header>
       <nav>
