--- a/CV.html
+++ b/CV.html
@@ -3,6 +3,8 @@
 <body style="background-color:thistle;">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="./assets/css/custom.css">
     <title>PRASERTCHAI TANAPORN's webpage</title>
   </head>
   <body>
