--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>ソフトウェアネットワーク演習II</title>
     <link rel="stylesheet" href="../assets/css/common.css">
+    <link rel="stylesheet" href="../assets/css/custom.css">
   </head>
   <body>
     <div id="wrapper">
