--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
         </ol>
         <h2>自己紹介</h2>
         <hr>
+      <li><a href="http://www.greyhoundcafe.co.th">link</a></li>
     </main>
 
     <footer>
       <small>クロステックデザインコース</small>
     </footer>
+
 
   </body>
 </html>
