--- a/CV.html
+++ b/CV.html
@@ -14,7 +14,7 @@
           <li style="font-family:courier"><a href="./index.html">Home</a></li>
           <li style="font-family:courier"><a href="./swnwb1.html">SwNwBasis:1</a></li>
           <li style="font-family:courier"><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
-          <li style="font-family:courier">CV</li>
+          <li style="font-family:courier">About me</li>
         </ul>
       </nav>
     </header>
