--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -15,7 +15,7 @@
             <li style="font-family:courier"><a href="../index.html">Home</a></li>
             <li style="font-family:courier"><a href="../swnwb1.html">SwNwBasis:1</a></li>
             <li style="font-family:courier">SwNwBasis:2</li>
-            <li style="font-family:courier"><a href="../CV.html">CV</a></li>
+            <li style="font-family:courier"><a href="../CV.html">About me</a></li>
 
 
           </ul>
