--- a/swnwb1.html
+++ b/swnwb1.html
@@ -15,7 +15,7 @@
           <li style="font-family:courier"><a href="./index.html">Home</a></li>
           <li style="font-family:courier">SwNwBasis:1</li>
           <li style="font-family:courier"><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
-          <li style="font-family:courier"><a href="./CV.html">CV</a></li>
+          <li style="font-family:courier"><a href="./CV.html">About me</a></li>
         </ul>
       </nav>
     </header>
