--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li style="font-family:courier">Home</li>
           <li style="font-family:courier"><a href="./swnwb1.html">SwNwBasis:1</a></li>
           <li style="font-family:courier"><a href="./subjects/swnwb2.html">SwNwBasis:2</a></li>
-          <li style="font-family:courier"><a href="./CV.html">CV</a></li>
+          <li style="font-family:courier"><a href="./CV.html">About me</a></li>
         </ul>
       </nav>
     </header>
