--- a/swnwb1.html
+++ b/swnwb1.html
@@ -22,9 +22,24 @@
     <hr>
     <main>
       <h1>ソフトウェアネットワーク演習I</h1>
-      <p>x
-      <br>xx</p>
-      <hr>
+      <div class="session">
+        <h2>session:1</h2>
+        <h3>課題:1</h3>
+        <p>メディア・プラクティス</p>
+        <img src="./assets/images/screen.jpg" alt="firework">
+      </div>
+
+      <div class="session">
+        <h2>session:2</h2>
+        <h3>課題:1</h3>
+        <p>Webページの構造</p>
+      </div>
+
+      <div class="session">
+        <h2>session:3</h2>
+        <h3>課題:1</h3>
+        <p>Webページのスタイル</p>
+      </div>
     </main>
 
     <footer>
