--- a/subjects/xtdbasis3.html
+++ b/subjects/xtdbasis3.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>ソフトウェアネットワーク演習II</title>
+    <title>クロステックデザイン演習III</title>
     <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="stylesheet" href="../assets/css/custom.css">
   </head>
@@ -23,13 +23,11 @@
         </nav>
       </header>
         <main>
-          <h1>ソフトウェアネットワーク演習II</h1>
+          <h1>クロステックデザイン演習III</h1>
           <div class="session">
             <h2>session:1</h2>
-            <h3>課題:micro:bit</h3>
-            <p>micro:bitで自分のオリジナルミニゲームを制作しました。
-              microbitの角度によって光っているLEDライトが変ります。中心に連れていけば勝利になります。</p>
-            <img src="./assets/images/microbit1.jpg" alt="screetshot1">
+            <h3>課題:1</h3>
+            <p>???</p>
           </div>
 
           <div class="session">
