--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -28,14 +28,19 @@
             <h2>session:1</h2>
             <h3>課題:micro:bit</h3>
             <p>micro:bitで自分のオリジナルミニゲームを制作しました。
-              microbitの角度によって光っているLEDライトが変ります。中心に連れていけば勝利になります。</p>
+              microbitの角度によって光っているLEDライトが変ります。
+              中心に連れていけば勝利になります。</p>
             <img src="./assets/images/microbit1.jpg" alt="screetshot1">
           </div>
 
           <div class="session">
             <h2>session:2</h2>
-            <h3>課題:1</h3>
-            <p>???</p>
+            <h3>課題:scratch, p5js</h3>
+            <p>私はゲームの関心が持っていますので、
+              scratchでBreadFallというゲームを作りました。
+      　　　　　パンが落とさないようにキャラクターをコントロールする。
+    　　　　　　授業内でまだできていない部分は点数の表示です。</p>
+            <img src="./assets/images/breadfall.jpg" alt="breadfallscreenshot">
           </div>
 
           <div class="session">
