--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -45,8 +45,9 @@
 
           <div class="session">
             <h2>session:3</h2>
-            <h3>課題:1</h3>
-            <p>???</p>
+            <h3>課題:p5.js</h3>
+            <p>クリスマスツリーは背景にしてクリックしたらデコレーションライトが表します。</p>
+            <img src="./assets/images/christmastree.jpg" alt="tree">
           </div>
 
           <footer>
