--- a/subjects/xtdbasis3.html
+++ b/subjects/xtdbasis3.html
@@ -26,19 +26,28 @@
           <h1>クロステックデザイン演習III</h1>
           <div class="session">
             <h2>session:1</h2>
-            <h3>課題:1</h3>
-            <p>???</p>
+            <h3>課題:レーザーカッティング</h3>
+            <p>gear generatorサイトのファイルから編集して
+              レーザーカッター機にファイルをアップしてgearが作れました。
+            そして私はチャレンジしてみました。External gearは円形ではなく４つの円で合わせて作りました。</p>
           </div>
 
           <div class="session">
             <h2>session:2</h2>
-            <h3>課題:1</h3>
-            <p>???</p>
+            <h3>課題:電子回路</h3>
+            <p>一つずつのパートを学んで電子回路を納得できてから実際にはんだ付けをしました。
+            意外と手順が難しかったと思いました。</p>
           </div>
 
           <div class="session">
             <h2>session:3</h2>
-            <h3>課題:1</h3>
+            <h3>課題:3Dプリンティング</h3>
+            <p>???</p>
+          </div>
+
+          <div class="session">
+            <h2>extra session</h2>
+            <h3>課題:ビニールカッティング</h3>
             <p>???</p>
           </div>
 
