--- a/subjects/xtdbasis3.html
+++ b/subjects/xtdbasis3.html
@@ -42,13 +42,15 @@
           <div class="session">
             <h2>session:3</h2>
             <h3>課題:3Dプリンティング</h3>
-            <p>???</p>
+            <p>3Dファイルの作成、
+              Meshと3Dプリントの製品デザインをブレーンストーミングにかけて
+            占いサイコロにしました。その結果はLineとつながっているのでスマホで確認できます。</p>
           </div>
 
           <div class="session">
             <h2>extra session</h2>
             <h3>課題:ビニールカッティング</h3>
-            <p>???</p>
+            <p>カッティングプロッタの設定などを学びました。</p>
           </div>
 
           <footer>
