--- a/subjects/swnwb2.html
+++ b/subjects/swnwb2.html
@@ -15,6 +15,7 @@
             <li style="font-family:courier"><a href="../index.html">Home</a></li>
             <li style="font-family:courier"><a href="../swnwb1.html">SwNwBasis:1</a></li>
             <li style="font-family:courier">SwNwBasis:2</li>
+            <li style="font-family:courier"><a href="./xtdbasis3.html">xdtbasis3</a></li>
             <li style="font-family:courier"><a href="../CV.html">About me</a></li>
 
 
@@ -30,7 +31,7 @@
             <p>micro:bitで自分のオリジナルミニゲームを制作しました。
               microbitの角度によって光っているLEDライトが変ります。
               中心に連れていけば勝利になります。</p>
-            <img src="./assets/images/microbit1.jpg" alt="screetshot1">
+            <img src="../assets/images/microbit1.jpg" alt="screetshot1">
           </div>
 
           <div class="session">
@@ -40,14 +41,14 @@
               scratchでBreadFallというゲームを作りました。
       　　　　　パンが落とさないようにキャラクターをコントロールする。
     　　　　　　授業内でまだできていない部分は点数の表示です。</p>
-            <img src="./assets/images/breadfall.jpg" alt="breadfallscreenshot">
+            <img src="../assets/images/breadfall.jpg" alt="breadfallscreenshot">
           </div>
 
           <div class="session">
             <h2>session:3</h2>
             <h3>課題:p5.js</h3>
             <p>クリスマスツリーは背景にしてクリックしたらデコレーションライトが表します。</p>
-            <img src="./assets/images/christmastree.jpg" alt="tree">
+            <img src="../assets/images/christmastree.jpg" alt="tree">
           </div>
 
           <footer>
